--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<!--
+  Angular Material things Taken from
+  https://goo.gl/6Z1p5J
+-->
+
 <!--The content below is only a placeholder and can be replaced.-->
 <div>
   <mat-toolbar color="primary">
@@ -11,49 +16,71 @@
         <button mat-button>Contact</button>
       </mat-toolbar-row>
   </mat-toolbar>
-
 </div>
 <div style="text-align:center">
     <mat-card *ngIf="nameDisplay">
-        <h1>Welcome {{ nameDisplay }}</h1>
+        <h3>Welcome {{ nameDisplay }}</h3>
       </mat-card> 
 </div>
 
-<div>
-  <ul>
-    <li *ngFor="let user of users">
-      {{user.name}}
-    </li>
-  </ul>
-</div>
+<div class="container">
 
-<app-chat></app-chat>
+    <div id="userFormArea" class="row">    
+        <div class="col-md-12">
+        
+        </div>
+    </div>
+
+
+  <div id="messageArea" class="row">    
+    <div class="col-md-4">
+      <div class="well">
+        <h3>Friends List</h3>
+        <ul class="list-group" id="users">
+          <li *ngFor="let user of users">
+            {{user.name}}
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="col-md-8">
+      <div class="chat" id="chat"></div>
+
+        <form id="messageForm">
+          <div class="form-group">
+            <label>Enter Message</label>
+            <textarea class="form-control" id="message"></textarea>
+            <br />
+            <input type="submit" class="btn btn-primary" value="Send Message" />
+          </div>
+        </form>
+
+    </div>
+
+  </div>
+</div>  
 
 <br><br>
 
-<div id="loginform">
-    <form action="index.php" method="post">
+    <div id="loginform" *ngIf="nameDisplay == false">    
         <p>Please enter your name to continue:</p>
-        <!-- <label for="name">Username:</label>
-        <input type="text" name="name" id="name" />
-        <input type="submit" name="enter" id="enter" value="Enter" /> -->
         <mat-card>
             <mat-form-field>
-              <input matInput placeholder="Enter name">
-              <!-- <input matInput [(ngModel)]="username" placeholder="Enter name"> -->
+              <!-- <input matInput placeholder="Enter name"> -->
+              <input matInput [(ngModel)]="username" placeholder="Enter name">
             </mat-form-field>  
             <br />    
             <button mat-raised-button (click)="showName()">Chat Now</button>
             <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
-          </mat-card>
-    </form>
+          </mat-card>         
     </div>
 
 <br><br>
 
-<div id="wrapper">
+<div id="wrapper" *ngIf="nameDisplay"> 
     <div id="menu">
-        <p class="welcome">Welcome, <b>Samson</b></p>
+        <p class="welcome">Welcome, <b>{{ nameDisplay }}</b></p>
         <p class="logout"><a id="exit" href="#">Exit Chat</a></p>
         <div style="clear:both"></div>
     </div>    
@@ -65,20 +92,11 @@
     </form>
 </div>
 
-<!-- <mat-card>
-    <mat-form-field>
-      <input matInput [(ngModel)]="answer" placeholder="Enter name">
-    </mat-form-field>
-  
-    <br>
+<div *ngIf="nameDisplay">
+    <app-chat></app-chat>
+    </div>
     
-    <button mat-raised-button (click)="showAnswer()">Answer me</button>
-    <mat-spinner [style.display]="showSpinner ? 'block' : 'none'"></mat-spinner>
-  </mat-card>
-  -->
   
-  <mat-card *ngIf="nameDisplay">
-    <h1>Welcome {{ nameDisplay }}, you're damn right.</h1>
-  </mat-card> 
+  
   
  
