--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -9,7 +9,7 @@
     <div class="default-nav">
       <div class="main-nav">
         <div class="toggle"></div>
-        <div class="main-nav-item"><a class="main-nav-item-link" href="#">Samson</a></div>
+        <div class="main-nav-item"><a class="main-nav-item-link" href="#">{{ nameDisplay }}</a></div>
         <div class="options"></div>
       </div>
     </div>
